First commited as before_47020_rev1