@@ -8,7 +8,7 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Wang Yizhuo (wangyizhuo@gmail.com) - patch (see Bugzilla #239178)
- *     Simon Scholz <simon.scholz@vogella.com> - Bug 430205, 458055
+ *     Simon Scholz <simon.scholz@vogella.com> - Bug 430205
  *******************************************************************************/
 package org.eclipse.ui.internal.forms.widgets;
 
@@ -36,7 +36,7 @@ public class FormImages {
 	}
 
 	private ResourceManagerManger manager = new ResourceManagerManger();
-	private Map<Integer, AbstractImageDescriptor> descriptors;
+	private Map descriptors;
 
 	private FormImages() {
 	}
@@ -54,7 +54,6 @@ public class FormImages {
 			fLength = length;
 		}
 
-		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof AbstractImageDescriptor) {
 				AbstractImageDescriptor id = (AbstractImageDescriptor)obj;
@@ -69,11 +68,10 @@ public class FormImages {
 			return false;
 		}
 
-		@Override
 		public int hashCode() {
 			int hash = 0;
-			for (RGB fRGB : fRGBs)
-				hash = hash * 7 + fRGB.hashCode();
+			for (int i = 0; i < fRGBs.length; i++)
+				hash = hash * 7 + fRGBs[i].hashCode();
 			hash = hash * 7 + fLength;
 			return hash;
 		}
@@ -90,7 +88,6 @@ public class FormImages {
 			fMarginHeight = marginHeight;
 		}
 
-		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof SimpleImageDescriptor) {
 				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
@@ -101,20 +98,17 @@ public class FormImages {
 			return false;
 		}
 
-		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
-			hash = hash * 7 + Integer.valueOf(fTheight).hashCode();
-			hash = hash * 7 + Integer.valueOf(fMarginHeight).hashCode();
+			hash = hash * 7 + new Integer(fTheight).hashCode();
+			hash = hash * 7 + new Integer(fMarginHeight).hashCode();
 			return hash;
 		}
 
-		@Override
 		public ImageData getImageData() {
 			return null;
 		}
 
-		@Override
 		public Image createImage(boolean returnMissingImageOnError,	Device device) {
 			Image image = new Image(device, 1, fLength);
 			Color color1 = new Color(device, fRGBs[0]);
@@ -146,7 +140,6 @@ public class FormImages {
 			fPercents = percents;
 		}
 
-		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof ComplexImageDescriptor) {
 				ComplexImageDescriptor id = (ComplexImageDescriptor) obj;
@@ -158,8 +151,8 @@ public class FormImages {
 					// if the only thing that isn't the same is the background color
 					// still return true if it does not matter (percents add up to 100)
 					int sum = 0;
-					for (int fPercent : fPercents)
-						sum += fPercent;
+					for (int i = 0; i < fPercents.length; i++)
+						sum += fPercents[i];
 					if (sum >= 100)
 						return true;
 				}
@@ -167,21 +160,18 @@ public class FormImages {
 			return false;
 		}
 
-		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
-			hash = hash * 7 + Boolean.valueOf(fVertical).hashCode();
-			for (int fPercent : fPercents)
-				hash = hash * 7 + Integer.valueOf(fPercent).hashCode();
+			hash = hash * 7 + new Boolean(fVertical).hashCode();
+			for (int i = 0; i < fPercents.length; i++)
+				hash = hash * 7 + new Integer(fPercents[i]).hashCode();
 			return hash;
 		}
 
-		@Override
 		public ImageData getImageData() {
 			return null;
 		}
 
-		@Override
 		public Image createImage(boolean returnMissingImageOnError,	Device device) {
 			int width = fVertical ? 1 : fLength;
 			int height = fVertical ? fLength : 1;
@@ -194,8 +184,8 @@ public class FormImages {
 			Color bg = fBgRGB == null ? null : new Color(device, fBgRGB);
 			drawTextGradient(gc, width, height, colors, fPercents, fVertical, bg);
 			gc.dispose();
-			for (Color color : colors)
-				color.dispose();
+			for (int i = 0; i < colors.length; i++)
+				colors[i].dispose();
 			if (bg != null)
 				bg.dispose();
 			return gradient;
@@ -259,7 +249,6 @@ public class FormImages {
 			fMarginHeight = marginHeight;
 		}
 
-		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof SimpleImageDescriptor) {
 				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
@@ -269,20 +258,17 @@ public class FormImages {
 			return false;
 		}
 
-		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
-			hash = hash * 7 + Integer.valueOf(fTheight).hashCode();
-			hash = hash * 7 + Integer.valueOf(fMarginHeight).hashCode();
+			hash = hash * 7 + new Integer(fTheight).hashCode();
+			hash = hash * 7 + new Integer(fMarginHeight).hashCode();
 			return hash;
 		}
 
-		@Override
 		public ImageData getImageData() {
 			return null;
 		}
 
-		@Override
 		public Image createImage(boolean returnMissingImageOnError, Device device) {
 			Image image = new Image(device, 1, fLength);
 			Color originalBgColor = new Color(device, fRGBs[0]);
@@ -295,24 +281,23 @@ public class FormImages {
 			gc.fillRectangle(0, fTheight - fMarginHeight - 4, 1, 4);
 			gc.dispose();
 			color1.dispose();
-			originalBgColor.dispose();
 			return image;
 		}
 	}
 
 	private class SimpleSectionGradientImageDescriptor extends SimpleSectionImageDescriptor {
 
-		SimpleSectionGradientImageDescriptor(Color color1, Color color2, int realtheight,
+		SimpleSectionGradientImageDescriptor(Color originalBgColor, Color color1, Color color2, int realtheight,
 				int theight,
 				int marginHeight) {
-			super(new Color[] { color1, color2 }, realtheight, theight, marginHeight);
+			super(new Color[] { originalBgColor, color1, color2 }, realtheight, theight, marginHeight);
 		}
 
-		@Override
 		public Image createImage(boolean returnMissingImageOnError, Device device) {
 			Image image = new Image(device, 1, fLength);
-			Color color1 = new Color(device, fRGBs[0]);
-			Color color2 = new Color(device, fRGBs[1]);
+			Color originalBgColor = new Color(device, fRGBs[0]);
+			Color color1 = new Color(device, fRGBs[1]);
+			Color color2 = new Color(device, fRGBs[2]);
 			image.setBackground(color1);
 			GC gc = new GC(image);
 			gc.setBackground(color1);
@@ -320,20 +305,23 @@ public class FormImages {
 			gc.setForeground(color2);
 			gc.setBackground(color1);
 			gc.fillGradientRectangle(0, fMarginHeight + 2, 1, fTheight - 2, true);
+			gc.setBackground(originalBgColor);
+			gc.fillRectangle(0, fTheight - fMarginHeight - 4, 1, 4);
 			gc.dispose();
 			color1.dispose();
 			color2.dispose();
-
+			originalBgColor.dispose();
 			return image;
 		}
 
 	}
 
-	public Image getSectionGradientImage(Color color1, Color color2, int realtheight, int theight, int marginHeight,
-			Display display) {
+	public Image getSectionGradientImage(Color originalBgColor, Color color1, Color color2, int realtheight,
+			int theight,
+			int marginHeight, Display display) {
 		if (color1 == null || color1.isDisposed())
 			return null;
-		AbstractImageDescriptor desc = new SimpleSectionGradientImageDescriptor(color1, color2,
+		AbstractImageDescriptor desc = new SimpleSectionGradientImageDescriptor(originalBgColor, color1, color2,
 				realtheight, theight, marginHeight);
 		return getGradient(desc, display);
 	}
@@ -350,8 +338,8 @@ public class FormImages {
 			int length, boolean vertical, Color bg, Display display) {
 		if (colors.length == 0)
 			return null;
-		for (Color color : colors)
-			if (color == null || color.isDisposed())
+		for (int i = 0; i < colors.length; i++)
+			if (colors[i] == null || colors[i].isDisposed())
 				return null;
 		if (bg != null && bg.isDisposed())
 			return null;
@@ -362,14 +350,14 @@ public class FormImages {
 	private synchronized Image getGradient(AbstractImageDescriptor desc, Display display) {
 		checkHashMaps();
 		Image result = manager.getResourceManager(display).createImage(desc);
-		descriptors.put(Integer.valueOf(result.hashCode()), desc);
+		descriptors.put(new Integer(result.hashCode()), desc);
 		return result;
 	}
 
 	public synchronized boolean markFinished(Image image, Display display) {
 		checkHashMaps();
-		Integer imageHashCode = Integer.valueOf(image.hashCode());
-		AbstractImageDescriptor desc = descriptors.get(imageHashCode);
+		Integer imageHashCode = new Integer(image.hashCode());
+		AbstractImageDescriptor desc = (AbstractImageDescriptor)descriptors.get(imageHashCode);
 		if (desc != null) {
 			LocalResourceManager resourceManager = manager.getResourceManager(display);
 			resourceManager.destroyImage(desc);
@@ -387,7 +375,7 @@ public class FormImages {
 
 	private void checkHashMaps() {
 		if (descriptors == null)
-			descriptors = new HashMap<>();
+			descriptors = new HashMap();
 	}
 
 	private void validateHashMaps() {
